--- a/_layouts/candidates.html
+++ b/_layouts/candidates.html
@@ -34,7 +34,7 @@
         <div class="candidate">    
             <div style="background-color: #8A05BE;" class="position-relative">
     
-                <img src="{{ site.baseUrl }}/assets/img/header-bg-candidates-compressed.jpg" alt="" id="header-image">
+                <img src="{{ site.baseurl }}/assets/img/header-bg-candidates-compressed.jpg" alt="" id="header-image">
     
                 <div class="position-absolute w-100 h-100 p-2" style="top: 0;">
                     <div class="position-absolute mr-2" style="right: 0;">
@@ -84,7 +84,7 @@
                     <div class="col-auto mt-1 mb-3">
                         <div class="p-3 d-flex justify-content-center align-items-center header-icon">
                             <div>
-                                <img src="{{ site.baseUrl }}/assets/svg/home/dress.svg" width="50" height="50" alt="">
+                                <img src="{{ site.baseurl }}/assets/svg/home/dress.svg" width="50" height="50" alt="">
                                 <h4>Moda</h4>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                     <div class="col-auto mt-1 mb-3">
                         <div class="p-3 header-icon justify-content-center align-items-center increase-hover">
                             <div>
-                                <img src="{{ site.baseUrl }}/assets/svg/home/make-up.svg" width="50" alt="">
+                                <img src="{{ site.baseurl }}/assets/svg/home/make-up.svg" width="50" alt="">
                                 <h4>Estética</h4>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                     <div class="col-auto mt-1 mb-3">
                         <div class="p-3 header-icon justify-content-center align-items-center increase-hover">
                             <div>
-                                <img src="{{ site.baseUrl }}/assets/svg/home/makeup.svg" width="50" alt="">
+                                <img src="{{ site.baseurl }}/assets/svg/home/makeup.svg" width="50" alt="">
                                 <h4>Cosméticos</h4>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                     <div class="col-auto mt-1 mb-3">
                         <div class="p-3 header-icon justify-content-center align-items-center increase-hover">
                             <div>
-                                <img src="{{ site.baseUrl }}/assets/svg/home/medicine.svg" width="50" alt="">
+                                <img src="{{ site.baseurl }}/assets/svg/home/medicine.svg" width="50" alt="">
                                 <h4>Farmácia</h4>
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                     <div class="col-auto mt-1 mb-3">
                         <div class="p-3 header-icon justify-content-center align-items-center increase-hover">
                             <div>
-                                <img src="{{ site.baseUrl }}/assets/svg/home/online-shop.svg" width="50" alt="">
+                                <img src="{{ site.baseurl }}/assets/svg/home/online-shop.svg" width="50" alt="">
                                 <h4>E-Commerce</h4>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                     <div class="col-auto mt-1 mb-3">
                         <div class="p-3 header-icon justify-content-center align-items-center increase-hover">
                             <div>
-                                <img src="{{ site.baseUrl }}/assets/svg/home/perfume.svg" width="50" alt="">
+                                <img src="{{ site.baseurl }}/assets/svg/home/perfume.svg" width="50" alt="">
                                 <h4>Perfumaria</h4>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                     <div class="col-auto mt-1 mb-3">
                         <div class="p-3 header-icon justify-content-center align-items-center increase-hover">
                             <div>
-                                <img src="{{ site.baseUrl }}/assets/svg/home/restaurant.svg" width="50" alt="">
+                                <img src="{{ site.baseurl }}/assets/svg/home/restaurant.svg" width="50" alt="">
                                 <h4>Alimentação</h4>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                     <div class="col-auto mt-1 mb-3">
                         <div class="p-3 header-icon justify-content-center align-items-center increase-hover">
                             <div>
-                                <img src="{{ site.baseUrl }}/assets/svg/home/shopping-bag.svg" width="50" alt="">
+                                <img src="{{ site.baseurl }}/assets/svg/home/shopping-bag.svg" width="50" alt="">
                                 <h4>Varejo</h4>
                             </div>
                         </div>
@@ -169,25 +169,25 @@
                         <div class="col-auto mt-2 mb-2 increase-hover">
                             <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                                 style="width: 190px; height: 190px;">
-                                <img src="{{ site.baseUrl }}/assets/img/bioage.png" width="120" alt="">
+                                <img src="{{ site.baseurl }}/assets/img/bioage.png" width="120" alt="">
                             </div>
                         </div>
                         <div class="col-auto mt-2 mb-2 increase-hover">
                             <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                                 style="width: 190px; height: 190px; ">
-                                <img src="{{ site.baseUrl }}/assets/img/ford.png" width="120" alt="">
+                                <img src="{{ site.baseurl }}/assets/img/ford.png" width="120" alt="">
                             </div>
                         </div>
                         <div class="col-auto mt-2 mb-2 increase-hover">
                             <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                                 style="width: 190px; height: 190px;">
-                                <img src="{{ site.baseUrl }}/assets/img/renault.png" width="120" alt="">
+                                <img src="{{ site.baseurl }}/assets/img/renault.png" width="120" alt="">
                             </div>
                         </div>
                         <div class="col-auto mt-2 mb-2 increase-hover">
                             <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                                 style="width: 190px; height: 190px;">
-                                <img src="{{ site.baseUrl }}/assets/img/oppacart.png" width="120" alt="">
+                                <img src="{{ site.baseurl }}/assets/img/oppacart.png" width="120" alt="">
                             </div>
                         </div>
                     </div>
@@ -196,25 +196,25 @@
                         <div class="col-auto mt-2 mb-2 increase-hover">
                             <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                                 style="width: 190px; height: 190px;">
-                                <img src="{{ site.baseUrl }}/assets/img/heineken.png" width="120" alt="">
+                                <img src="{{ site.baseurl }}/assets/img/heineken.png" width="120" alt="">
                             </div>
                         </div>
                         <div class="col-auto mt-2 mb-2 increase-hover">
                             <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                                 style="width: 190px; height: 190px; ">
-                                <img src="{{ site.baseUrl }}/assets/img/even.png" width="120" alt="">
+                                <img src="{{ site.baseurl }}/assets/img/even.png" width="120" alt="">
                             </div>
                         </div>
                         <div class="col-auto mt-2 mb-2 increase-hover">
                             <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                                 style="width: 190px; height: 190px;">
-                                <img src="{{ site.baseUrl }}/assets/img/benjamin.png" width="120" alt="">
+                                <img src="{{ site.baseurl }}/assets/img/benjamin.png" width="120" alt="">
                             </div>
                         </div>
                         <div class="col-auto mt-2 mb-2 increase-hover">
                             <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                                 style="width: 190px; height: 190px; ">
-                                <img src="{{ site.baseUrl }}/assets/img/lopes.png" width="120" alt="">
+                                <img src="{{ site.baseurl }}/assets/img/lopes.png" width="120" alt="">
                             </div>
                         </div>
                     </div>
@@ -230,22 +230,22 @@
     
                 <div class="m-0 row justify-content-center p-2 mt-5">
                     <div class="col-auto col-md-3 text-center increase-hover pt-2">
-                        <img src="{{ site.baseUrl }}/assets/svg/dollar.svg" width="110" alt="">
+                        <img src="{{ site.baseurl }}/assets/svg/dollar.svg" width="110" alt="">
                         <p>Crie sua conta 100% gratis</p>
                     </div>
     
                     <div class="col-auto col-md-3 text-center increase-hover pt-2">
-                        <img src="{{ site.baseUrl }}/assets/svg/phone--touched.svg" width="110" alt="">
+                        <img src="{{ site.baseurl }}/assets/svg/phone--touched.svg" width="110" alt="">
                         <p>Responda em 5 minutinhos nossas perguntas online</p>
                     </div>
     
                     <div class="col-auto col-md-3 text-center increase-hover pt-2">
-                        <img src="{{ site.baseUrl }}/assets/svg/people.svg" width="110" alt="">
+                        <img src="{{ site.baseurl }}/assets/svg/people.svg" width="110" alt="">
                         <p>Preencha seu perfil 100% Digital</p>
                     </div>
     
                     <div class="col-auto col-md-3 text-center increase-hover pt-2">
-                        <img src="{{ site.baseUrl }}/assets/svg/face-scan.svg" width="110" alt="">
+                        <img src="{{ site.baseurl }}/assets/svg/face-scan.svg" width="110" alt="">
                         <p>Esteja visível para nossas 2.700 empresas na hora!</p>
                     </div>
                 </div>
@@ -263,27 +263,27 @@
     
                         <div class="d-table">
                             <div class="pt-4 pb-4 d-flex align-items-center">
-                                <img src="{{ site.baseUrl }}/assets/img/no-payment.png" alt="no payment" width="56">
+                                <img src="{{ site.baseurl }}/assets/img/no-payment.png" alt="no payment" width="56">
                                 <span>Chega de pagar para sites antigos de vagas</span>
                             </div>
     
                             <div class="pt-4 pb-4 d-flex align-items-center">
-                                <img src="{{ site.baseUrl }}/assets/img/file-rounded.png" alt="no payment" width="56" class="">
+                                <img src="{{ site.baseurl }}/assets/img/file-rounded.png" alt="no payment" width="56" class="">
                                 <span>Chega de elaborar currículo e ficar enviando por e-mail</span>
                             </div>
     
                             <div class="pt-4 pb-4 d-flex align-items-center">
-                                <img src="{{ site.baseUrl }}/assets/img/money-bag.png" alt="no payment" width="56" class="">
+                                <img src="{{ site.baseurl }}/assets/img/money-bag.png" alt="no payment" width="56" class="">
                                 <span>Saiba qual o salário da vaga antes de se aplicar</span>
                             </div>
     
                             <div class="pt-4 pb-4 d-flex align-items-center">
-                                <img src="{{ site.baseUrl }}/assets/img/map-perspective.png" alt="no payment" width="56" class="">
+                                <img src="{{ site.baseurl }}/assets/img/map-perspective.png" alt="no payment" width="56" class="">
                                 <span>As vagas são sempre perto da sua casa</span>
                             </div>
     
                             <div class="pt-4 pb-4 d-flex align-items-center">
-                                <img src="{{ site.baseUrl }}/assets/img/mobile-app.png" alt="no payment" width="56" class="">
+                                <img src="{{ site.baseurl }}/assets/img/mobile-app.png" alt="no payment" width="56" class="">
                                 <span>Veja tudo no app na palma da sua mão</span>
                             </div>
                         </div>
@@ -301,7 +301,7 @@
                 <div class="row m-0">
                     <div class="col-auto d-flex align-items-center justify-content-center">
                         <div>
-                            <img src="{{ site.baseUrl }}/assets/img/smart-mac_computer-empreguei.png" height="550" alt="" class="img-fluid p-3">
+                            <img src="{{ site.baseurl }}/assets/img/smart-mac_computer-empreguei.png" height="550" alt="" class="img-fluid p-3">
                         </div>
                     </div>
     
@@ -345,7 +345,7 @@
                     <!-- Endeavor -->
                     <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item">
                         <div class="p-3 align-items-center d-flex">
-                            <img src="{{ site.baseUrl }}/assets/img/endeavor.png" alt="Endeavor">
+                            <img src="{{ site.baseurl }}/assets/img/endeavor.png" alt="Endeavor">
                         </div>
     
                         <a target="_blank" href="https://endeavor.org.br/empreendedores-endeavor/marcio-furtado/">
@@ -358,7 +358,7 @@
                     <!-- Exame -->
                     <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item">
                         <div class="p-3 align-items-center d-flex">
-                            <img src="{{ site.baseUrl }}/assets/img/exame.png" alt="Exame">
+                            <img src="{{ site.baseurl }}/assets/img/exame.png" alt="Exame">
                         </div>
     
                         <a target="_blank"
@@ -372,7 +372,7 @@
                     <!-- Globo News -->
                     <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item">
                         <div class="p-3 align-items-center d-flex">
-                            <img src="{{ site.baseUrl }}/assets/img/globo-news.png" alt="Globo News">
+                            <img src="{{ site.baseurl }}/assets/img/globo-news.png" alt="Globo News">
                         </div>
     
                         <a target="_blank"
@@ -386,7 +386,7 @@
                     <!-- Valor -->
                     <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item">
                         <div class="p-3 align-items-center d-flex">
-                            <img src="{{ site.baseUrl }}/assets/img/valor.png" alt="Valor">
+                            <img src="{{ site.baseurl }}/assets/img/valor.png" alt="Valor">
                         </div>
     
                         <a target="_blank"
@@ -411,7 +411,7 @@
                             <p>Como funciona</p>
                             <p>Mídia</p>
                             <p>Quero Trabalhar</p>
-                            <p><a href="{{ site.baseUrl }}/empresas"> Sou Empresa </a></p>
+                            <p><a href="{{ site.baseurl }}/empresas"> Sou Empresa </a></p>
                         </div>
     
                         <div class="col-md-4 text-center justify-content-center mt-2">
@@ -473,7 +473,7 @@
                             <h2>® 2017 Empreguei</h2>
                             <p>empreguei.com é uma empresa apoiada pela</p>
                             <div>
-                                <img src="{{ site.baseUrl }}/assets/img/endeavor.png" alt="Endeavor" width="200">
+                                <img src="{{ site.baseurl }}/assets/img/endeavor.png" alt="Endeavor" width="200">
                             </div>
                         </div>
                     </div>
