--- a/_layouts/companies.html
+++ b/_layouts/companies.html
@@ -42,8 +42,8 @@
             </div>
 
             <div class="right-side">
-                <img src="{{ site.baseUrl }}/assets/img/business-meeting.jpg" alt="Header Image" id="header-image">
-                <img src="{{ site.baseUrl }}/assets/img/outlier-old.jpeg" alt="Header Image" class="image-overlay">
+                <img src="{{ site.baseurl }}/assets/img/business-meeting.jpg" alt="Header Image" id="header-image">
+                <img src="{{ site.baseurl }}/assets/img/outlier-old.jpeg" alt="Header Image" class="image-overlay">
 
                 <div class="container-button">
                     <button 
@@ -195,25 +195,25 @@
                     <div class="col-auto mt-2 mb-2 increase-hover">
                         <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                             style="width: 190px; height: 190px;">
-                            <img src="{{ site.baseUrl }}/assets/img/bioage.png" width="120" alt="">
+                            <img src="{{ site.baseurl }}/assets/img/bioage.png" width="120" alt="">
                         </div>
                     </div>
                     <div class="col-auto mt-2 mb-2 increase-hover">
                         <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                             style="width: 190px; height: 190px;">
-                            <img src="{{ site.baseUrl }}/assets/img/ford.png" width="120" alt="">
+                            <img src="{{ site.baseurl }}/assets/img/ford.png" width="120" alt="">
                         </div>
                     </div>
                     <div class="col-auto mt-2 mb-2 increase-hover">
                         <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                             style="width: 190px; height: 190px;">
-                            <img src="{{ site.baseUrl }}/assets/img/renault.png" width="120" alt="">
+                            <img src="{{ site.baseurl }}/assets/img/renault.png" width="120" alt="">
                         </div>
                     </div>
                     <div class="col-auto mt-2 mb-2 increase-hover">
                         <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                             style="width: 190px; height: 190px;">
-                            <img src="{{ site.baseUrl }}/assets/img/oppacart.png" width="120" alt="">
+                            <img src="{{ site.baseurl }}/assets/img/oppacart.png" width="120" alt="">
                         </div>
                     </div>
                 </div>
@@ -222,25 +222,25 @@
                     <div class="col-auto mt-2 mb-2 increase-hover">
                         <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                             style="width: 190px; height: 190px;">
-                            <img src="{{ site.baseUrl }}/assets/img/heineken.png" width="120" alt="">
+                            <img src="{{ site.baseurl }}/assets/img/heineken.png" width="120" alt="">
                         </div>
                     </div>
                     <div class="col-auto mt-2 mb-2 increase-hover">
                         <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                             style="width: 190px; height: 190px;">
-                            <img src="{{ site.baseUrl }}/assets/img/even.png" width="120" alt="">
+                            <img src="{{ site.baseurl }}/assets/img/even.png" width="120" alt="">
                         </div>
                     </div>
                     <div class="col-auto mt-2 mb-2 increase-hover">
                         <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                             style="width: 190px; height: 190px;">
-                            <img src="{{ site.baseUrl }}/assets/img/benjamin.png" width="120" alt="">
+                            <img src="{{ site.baseurl }}/assets/img/benjamin.png" width="120" alt="">
                         </div>
                     </div>
                     <div class="col-auto mt-2 mb-2 increase-hover">
                         <div class="rounded-circle shadow d-flex align-items-center justify-content-center"
                             style="width: 190px; height: 190px;">
-                            <img src="{{ site.baseUrl }}/assets/img/lopes.png" width="120" alt="">
+                            <img src="{{ site.baseurl }}/assets/img/lopes.png" width="120" alt="">
                         </div>
                     </div>
                 </div>
@@ -289,7 +289,7 @@
 
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item increase-hover">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/payment-method.png" alt="Comercial" width="75" height="75">
+                        <img src="{{ site.baseurl }}/assets/img/payment-method.png" alt="Comercial" width="75" height="75">
                     </div>
                     <a>
                         <div class="w-100 btn-learn-more" style="cursor: default;">
@@ -300,7 +300,7 @@
 
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item increase-hover">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/investment.png" alt="Financeiro" width="75" height="75">
+                        <img src="{{ site.baseurl }}/assets/img/investment.png" alt="Financeiro" width="75" height="75">
                     </div>
                     <a>
                         <div class="w-100 btn-learn-more" style="cursor: default;">
@@ -311,7 +311,7 @@
 
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item increase-hover">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/conversation.png" alt="Atendimento ao Cliente" width="75" height="75">
+                        <img src="{{ site.baseurl }}/assets/img/conversation.png" alt="Atendimento ao Cliente" width="75" height="75">
                     </div>
                     <a>
                         <div class="w-100 btn-learn-more" style="cursor: default;">
@@ -322,7 +322,7 @@
 
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item increase-hover">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/monitor.png" alt="Administrativo" width="75" height="75">
+                        <img src="{{ site.baseurl }}/assets/img/monitor.png" alt="Administrativo" width="75" height="75">
                     </div>
                     <a>
                         <div class="w-100 btn-learn-more" style="cursor: default;">
@@ -333,7 +333,7 @@
 
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item increase-hover">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/data.png" alt="Tecnologia" width="75" height="75">
+                        <img src="{{ site.baseurl }}/assets/img/data.png" alt="Tecnologia" width="75" height="75">
                     </div>
                     <a>
                         <div class="w-100 btn-learn-more" style="cursor: default;">
@@ -344,7 +344,7 @@
 
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item increase-hover">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/digital-marketing.png" alt="Marketing" width="75" height="75">
+                        <img src="{{ site.baseurl }}/assets/img/digital-marketing.png" alt="Marketing" width="75" height="75">
                     </div>
                     <a>
                         <div class="w-100 btn-learn-more" style="cursor: default;">
@@ -355,7 +355,7 @@
 
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item increase-hover">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/food.png" alt="Hotelaria" width="75" height="75">
+                        <img src="{{ site.baseurl }}/assets/img/food.png" alt="Hotelaria" width="75" height="75">
                     </div>
                     <a>
                         <div class="w-100 btn-learn-more" style="cursor: default;">
@@ -366,7 +366,7 @@
 
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item increase-hover">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/shopping-cart.png" alt="Varejo" width="75" height="75">
+                        <img src="{{ site.baseurl }}/assets/img/shopping-cart.png" alt="Varejo" width="75" height="75">
                     </div>
                     <a>
                         <div class="w-100 btn-learn-more" style="cursor: default;">
@@ -386,7 +386,7 @@
                 <!-- Endeavor -->
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/endeavor.png" alt="Endeavor">
+                        <img src="{{ site.baseurl }}/assets/img/endeavor.png" alt="Endeavor">
                     </div>
 
                     <a target="_blank" href="https://endeavor.org.br/empreendedores-endeavor/marcio-furtado/">
@@ -399,7 +399,7 @@
                 <!-- Exame -->
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/exame.png" alt="Exame">
+                        <img src="{{ site.baseurl }}/assets/img/exame.png" alt="Exame">
                     </div>
 
                     <a target="_blank"
@@ -413,7 +413,7 @@
                 <!-- Globo News -->
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/globo-news.png" alt="Globo News">
+                        <img src="{{ site.baseurl }}/assets/img/globo-news.png" alt="Globo News">
                     </div>
 
                     <a target="_blank"
@@ -427,7 +427,7 @@
                 <!-- Valor -->
                 <div class="col-auto shadow rounded p-0 m-1 m-md-3 midia-item">
                     <div class="p-3 align-items-center d-flex">
-                        <img src="{{ site.baseUrl }}/assets/img/valor.png" alt="Valor">
+                        <img src="{{ site.baseurl }}/assets/img/valor.png" alt="Valor">
                     </div>
 
                     <a target="_blank"
@@ -511,7 +511,7 @@
                         <h2>® 2017 Empreguei</h2>
                         <p>empreguei.com é uma empresa apoiada pela</p>
                         <div>
-                            <img src="{{ site.baseUrl }}/assets/img/endeavor.png" alt="Endeavor" width="200">
+                            <img src="{{ site.baseurl }}/assets/img/endeavor.png" alt="Endeavor" width="200">
                         </div>
                     </div>
                 </div>
