--- a/_includes/candidate_navigation.html
+++ b/_includes/candidate_navigation.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm p-0 m-0" style="background-color: white;">
 
     <a target="_blank" class="navbar-brand ml-3 mr-3 mt-2 mb-2" href="{{ site.url }}">
-        <img src="https://empreguei.github.io/svg/logo--dark.svg" width="180">
+        <img src="{{ site.baseurl }}/assets/svg/logo--dark.svg" width="180">
     </a>
 
     <button class="navbar-toggler ml-3 mr-3 mt-2 mb-2" type="button" data-toggle="collapse"
@@ -33,7 +33,7 @@
 
             <li class="nav-item">
                 <a class="nav-link nav-btn nav-btn-candidate increase-hover"
-                    href="{{ site.url }}/candidato">Quero trabalhar</a>
+                    href="{{ site.baseurl }}/candidato">Quero trabalhar</a>
             </li>
 
             <li class="nav-item">
