--- a/_includes/company_navigation.html
+++ b/_includes/company_navigation.html
@@ -1,7 +1,7 @@
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm p-0 m-0" style="background-color: white;">
     <a target="_blank" class="navbar-brand ml-3 mr-3 mt-2 mb-2" href="{{ site.url }}">
-        <img src="https://empreguei.github.io/svg/logo--dark.svg" width="180" alt="Empreguei Logo">
+        <img src="{{ site.baseurl }}/assets/svg/logo--dark.svg" width="180" alt="Empreguei Logo">
     </a>
     
     <button class="navbar-toggler ml-3 mr-3 mt-2 mb-2" type="button" data-toggle="collapse"
