fix: site base url

--- a/_layouts/companies.html
+++ b/_layouts/companies.html
@@ -254,7 +254,7 @@
             <h2 class="section-title pt-5 pb-5">Como Funciona</h2>
             <div class="how-works">
                 <div class="image-profile">  
-                    <img src="./../assets/img/marcio.jpg" alt="Marcio Furtado" />
+                    <img src="{{ site.baseurl }}/assets/img/marcio.jpg" alt="Marcio Furtado" />
                     <span class="author" >Marcio Furtado, especialista em gestão de Talentos pela Stanford University, empreendedor Endeavor desde 2012 e fundador da Empreguei.</span>
                 </div>
                 <div class="message">
@@ -274,11 +274,11 @@
         <!-- info -->
         <div class="info">
             <div class="background">
-                <img src="./../assets/img/geny.jpeg" alt="info background"/>
+                <img src="{{ site.baseurl }}/assets/img/geny.jpeg" alt="info background"/>
             </div>
             <div class="words">
                 <p>Só a Empreguei destaca pra você os candidatos com as características abaixo em seu DNA</p>
-                <img src="./../assets/img/words.png" alt="info words" />
+                <img src="{{ site.baseurl }}/assets/img/words.png" alt="info words" />
             </div>
         </div>
 
