fix: onwer profile image

--- a/_layouts/companies.html
+++ b/_layouts/companies.html
@@ -254,7 +254,7 @@
             <h2 class="section-title pt-5 pb-5">Como Funciona</h2>
             <div class="how-works">
                 <div class="image-profile">  
-                    <img src="{{ site.baseurl }}/assets/img/marcio.jpg" alt="Marcio Furtado" />
+                    <img src="{{ site.baseurl }}/assets/img/marcio.JPG" alt="Marcio Furtado" />
                     <span class="author" >Marcio Furtado, especialista em gestão de Talentos pela Stanford University, empreendedor Endeavor desde 2012 e fundador da Empreguei.</span>
                 </div>
                 <div class="message">
